--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,72 @@
-/* This is a multi-line
-comment. Add your CSS code
-from Unit 1 - 5 below  */
+h1 {
+	color: rgb(2, 132, 130);
+}
+
+h2 {
+
+	color: #ffd700;
+}
+	
+nav {
+	background: #808080;
+}
+
+h1, h2, p{
+	text-align: center;
+	width: 50%;
+}
+
+.title {
+	background:#ffbf00;
+	color: #ffffff;
+	display: block;	
+	float: left;
+	padding: 35px;
+	
+}
+
+.clearfix:after {
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content:" ";
+	clear: both;
+	height:0;
+
+}
+
+nav a:hover {
+	background-color: #ee5f3c;
+	
+}
+
+
+.board{
+	height: 50%;
+	width: 50%;
+	display: inline-block;
+
+}
+
+
+.card{
+	height: 200px;
+	width: 150px;
+	border: 1px  solid #000000;
+	background: rgb( 255, 255, 10 );
+	border-radius: 10px;
+	margin: 10.5%;
+	float: left;
+	
+
+	
+}
+
+.name{
+	color: #ff0000;
+}
+
+footer{
+	text-align: center;
+}
+
