final try at flipping cards to work

--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -60,6 +60,15 @@ nav a:hover {
 	
 }
 
+img {
+	height: 200px;
+	width: 150px;
+	border: 1px  solid #000000;
+	border-radius: 10px;
+	margin: 10.5%;
+	float: left;
+}
+
 .name{
 	color: #ff0000;
 }
